# AICodeOptEngine

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  go.mod  go.sum  main.go
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  index.tsx
qdrant_storage/: raft_state.json
rust-service/: Cargo.toml  Dockerfile
rust-service/src/: main.rs
