[package]
name = "rust-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.120"
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
